fixed control grid alignment

--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,53 @@
     margin: 50px auto;
     border: solid black 2px;
 }
-.controls{
-    display: inline-block;
+header{
+    text-align: center;
+}
+.control-container{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 5px;
+    height: 100px;
+    width: 300px;
     margin: auto;
-    width: 70px;
+    position: relative;
+    right: 40px;
+}
+label{
+    justify-self: end;
+}
+#gridSizeLabel{
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+#gridSize{
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+}
+#colorPallateLabel{
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+#colorPalatte{
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+#opacityRangeLabel{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+}
+#opacityRange{
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+#clear{
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+    width: 40%;
+    justify-self: center;
 }
 body{
     width: 100%;
-}
-.controls label{
-    text-align: right;
-    margin: 5px 0 0 0;
-    width: auto;
 }
